Added ExceptionStrategy to Environment/SelectorManager Many fixes from FindBugs
git-svn-id: https://svn.mpi-sws.org/DS/freepastry/trunk@3519 c21dacaf-8602-0410-aacd-8bc41df2cbe7